# ruvector

./: .gitignore  .implementation-summary.md  ANALYSIS_AGENT_6_REPORT.txt  ANALYSIS_AGENT_6_RESULTS.json  ANALYSIS_AGENT_6_SUMMARY.md  ANALYSIS_AGENT_6_TECHNICAL_REPORT.md  Cargo.toml  EXPORT_MODULE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE3_COMPLETE.txt  README.md  eccentricity_analysis_report.py  package-lock.json  package.json
crates/prime-radiant/: Cargo.toml
crates/prime-radiant/benches/: attention_bench.rs  coherence_bench.rs  coherence_benchmarks.rs  energy_bench.rs  gate_bench.rs  gpu_benchmarks.rs  hyperbolic_bench.rs  incremental_bench.rs  mincut_bench.rs  residual_bench.rs  simd_benchmarks.rs  sona_bench.rs  tile_bench.rs
crates/prime-radiant/src/: lib.rs  types.rs
crates/prime-radiant/src/attention/: adapter.rs  mod.rs  moe.rs  topology.rs
crates/prime-radiant/src/coherence/: energy.rs  engine.rs  incremental.rs  mod.rs  spectral.rs
crates/prime-radiant/src/distributed/: adapter.rs  config.rs  mod.rs  state.rs
crates/prime-radiant/src/execution/: action.rs  executor.rs  gate.rs  ladder.rs  mod.rs
crates/prime-radiant/src/governance/: mod.rs  policy.rs  repository.rs  witness.rs
crates/prime-radiant/src/gpu/: buffer.rs  device.rs  dispatch.rs  engine.rs  kernels.rs  mod.rs  pipeline.rs
crates/prime-radiant/src/hyperbolic/: adapter.rs  depth.rs  energy.rs  mod.rs
crates/prime-radiant/src/learned_rho/: config.rs  map.rs  mod.rs  training.rs
crates/prime-radiant/src/mincut/: adapter.rs  isolation.rs  metrics.rs
crates/prime-radiant/src/neural_gate/: decision.rs  encoding.rs  gate.rs  mod.rs
crates/prime-radiant/src/signal/: mod.rs
crates/prime-radiant/src/simd/: energy.rs  matrix.rs  mod.rs  vectors.rs
crates/prime-radiant/src/sona_tuning/: adjustment.rs  config.rs  mod.rs  tuner.rs
crates/prime-radiant/src/storage/: mod.rs
crates/prime-radiant/src/substrate/: edge.rs  graph.rs  mod.rs  node.rs  restriction.rs
crates/prime-radiant/src/tiles/: adapter.rs  coordinator.rs  fabric.rs  mod.rs
crates/prime-radiant/tests/: chaos_tests.rs  gpu_coherence_tests.rs  replay_determinism.rs
crates/prime-radiant/tests/integration/: coherence_tests.rs  gate_tests.rs  governance_tests.rs  graph_tests.rs  mod.rs
crates/prime-radiant/tests/property/: coherence_properties.rs
crates/ruQu/: Cargo.toml  README.md
crates/ruQu/src/: adaptive.rs  lib.rs  stim.rs  tile.rs
crates/ruvector-attention-wasm/: Cargo.toml
crates/ruvector-core/: Cargo.toml
crates/ruvector-core/benches/: batch_operations.rs  comprehensive_bench.rs  quantization_bench.rs
crates/ruvector-core/src/: advanced_features.rs  agenticdb.rs  arena.rs  cache_optimized.rs  error.rs  index.rs  lib.rs  lockfree.rs  quantization.rs  simd_intrinsics.rs  storage.rs  storage_memory.rs  vector_db.rs
crates/ruvector-core/src/advanced/: hypergraph.rs  learned_index.rs  mod.rs  neural_hash.rs  tda.rs
crates/ruvector-core/src/advanced_features/: conformal_prediction.rs  filtered_search.rs  hybrid_search.rs  mmr.rs  product_quantization.rs
crates/ruvector-core/src/memory/: allocator.rs  eviction.rs  hysteresis.rs  metadata.rs  mod.rs  page.rs  pinning.rs  pool.rs  residency.rs  sync.rs  tenant.rs  thread_cache.rs
crates/ruvector-core/tests/: advanced_features_integration.rs  concurrent_tests.rs  hnsw_integration_test.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  stress_tests.rs  unit_tests.rs
crates/ruvector-hyperbolic-hnsw/: Cargo.toml
crates/ruvector-nervous-system/: Cargo.toml  README.md
crates/ruvector-nervous-system/benches/: latency_benchmarks.rs
crates/ruvector-nervous-system/src/: lib.rs
crates/ruvector-nervous-system/src/compete/: kwta.rs  wta.rs
crates/ruvector-nervous-system/src/eventbus/: queue.rs  shard.rs
crates/ruvector-nervous-system/src/hdc/: memory.rs  mod.rs  similarity.rs  vector.rs
crates/ruvector-nervous-system/tests/: btsp_integration.rs  eprop_tests.rs  ewc_tests.rs  integration.rs  memory_bounds.rs  throughput.rs
crates/ruvector-profiler/: Cargo.toml
crates/ruvector-profiler/src/: csv_emitter.rs  latency.rs  lib.rs  memory.rs  power.rs
crates/ruvector-sparse-inference/: Cargo.toml  README.md
crates/ruvector-sparse-inference/benches/: simd_kernels.rs  sparse_inference_bench.rs
crates/ruvector-sparse-inference/examples/: basic_usage.rs
crates/ruvector-sparse-inference/src/: config.rs  lib.rs  memory.rs  ops.rs
crates/ruvector-sparse-inference/tests/: backend_simd_tests.rs
crates/ruvector-tiny-dancer-core/: Cargo.toml
crates/ruvector-tiny-dancer-core/examples/: admin-server.rs  full_observability.rs  metrics_example.rs  tracing_example.rs  train-model.rs
crates/ruvector-tiny-dancer-core/src/: api.rs  error.rs  lib.rs  model.rs  router.rs  training.rs  uncertainty.rs
crates/ruvector-vwm/: Cargo.toml
crates/ruvector-vwm/src/: coherence.rs  draw_list.rs  entity.rs  lib.rs  lineage.rs  streaming.rs  tile.rs
crates/ruvllm/: Cargo.toml  README.md
crates/ruvllm/benches/: rlm_bench.rs
crates/ruvllm/docs/: huggingface_readme.md
crates/ruvllm/examples/: benchmark_model.rs  download_test_model.rs
crates/ruvllm/src/: error.rs  kv_cache.rs  lib.rs  paged_attention.rs  sona.rs  witness_log.rs
crates/ruvllm/tests/: e2e_integration_test.rs  real_model_test.rs  rlm_integration.rs
crates/rvf/rvf-cli/: Cargo.toml  README.md
crates/rvf/rvf-crypto/: Cargo.toml  README.md
crates/rvf/rvf-types/: Cargo.toml
crates/rvf/rvf-wasm/: Cargo.toml  README.md
crates/rvlite/: Cargo.toml  README.md
crates/rvlite/src/: lib.rs
examples/OSpipe/: Cargo.toml
examples/OSpipe/src/: lib.rs
examples/OSpipe/tests/: integration.rs
examples/benchmarks/: Cargo.toml
examples/benchmarks/src/: lib.rs  logging.rs  swarm_regret.rs  temporal.rs  timepuzzles.rs  vector_index.rs
examples/benchmarks/tests/: integration_tests.rs
examples/edge/: Cargo.toml
examples/edge/pkg/: README.md  package.json
examples/experiments/cosmetic-wasm/: Cargo.toml
examples/ruvLLM/esp32-flash/: Cargo.toml  README.md
(+851 files in other folders)
