[package]
name = "ruvector-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-performance Rust vector database core with HNSW indexing"

[dependencies]
# Core functionality
redb = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
hnsw_rs = { workspace = true, optional = true }
simsimd = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }

# Serialization
rkyv = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Math and numerics
ndarray = { workspace = true, features = ["serde"] }
rand = { workspace = true }
rand_distr = { workspace = true }

# Performance
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Time and UUID
chrono = { workspace = true }
uuid = { workspace = true, optional = true }

# Cryptography for signed discoveries
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
tempfile = "3.13"
tracing-subscriber = { workspace = true }

[[bench]]
name = "distance_metrics"
harness = false

[[bench]]
name = "hnsw_search"
harness = false

[[bench]]
name = "quantization_bench"
harness = false

[[bench]]
name = "batch_operations"
harness = false

[[bench]]
name = "comprehensive_bench"
harness = false

[features]
default = ["simd", "uuid-support", "storage", "hnsw"]
uuid-support = ["uuid"]
simd = []
storage = ["redb", "memmap2"]  # File-based storage (not available in WASM)
hnsw = ["hnsw_rs"]  # HNSW indexing (not available in WASM due to mmap dependency)
memory-only = []  # Pure in-memory storage for WASM

[[example]]
name = "kuiper_belt_agenticdb"
path = "../../examples/kuiper_belt/agenticdb_analysis.rs"
required-features = ["storage"]

[[example]]
name = "planet_discovery"
path = "../../examples/kuiper_belt/planet_discovery.rs"
required-features = ["storage"]

[[example]]
name = "perihelion_clustering"
path = "../../examples/perihelion_clustering.rs"
required-features = ["storage"]

[[example]]
name = "kuiper_belt_sma_gap_analysis"
path = "../../examples/kuiper_belt_sma_gap_analysis.rs"
required-features = ["storage"]

[[example]]
name = "kuiper_belt_omega_analysis"
path = "../../examples/kuiper_belt_omega_analysis.rs"

[[example]]
name = "sma_gap_analyzer"
path = "../../examples/sma_gap_analyzer.rs"

[[example]]
name = "kuiper_belt_kozai_lidov"
path = "../../examples/kuiper_belt_kozai_lidov.rs"

[[example]]
name = "universal_planet_search"
path = "../../examples/kuiper_belt/universal_planet_search.rs"
required-features = ["storage"]

[lib]
crate-type = ["rlib"]
bench = false
