[package]
name = "ruvector-sparse-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Math and numerics
ndarray = { version = "0.16", features = ["serde"] }
rand = { workspace = true }
rand_distr = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Performance
rayon = { workspace = true }
parking_lot = { workspace = true }

# Memory mapping for model loading
memmap2 = { workspace = true }

# GGUF model loading support
byteorder = "1.5"
half = "2.4"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }

[[bench]]
name = "sparse_inference_bench"
harness = false

[lib]
bench = false
